[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dataprivacy-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — GDPR & data privacy compliance MCP Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "gdpr", "privacy", "data-protection", "compliance", "ico", "meok"]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://dataprivacyof.ai"
Repository = "https://github.com/CSOAI-ORG/dataprivacy-ai-mcp"
